# Qt-Template-For-CMake

./: .gitignore  CMakeLists.txt  main.cpp  res.qrc
.CLion2019.2/config/tools/: Qt5.xml
src/: mywidget.cpp
